--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
         </header>
         <div class="landbot"></div>
     </div>
-    <div class="chart">
+    <div class="chart" style="display: none;">
         <figure class="company_logo">
             <img alt="Brand logo">
         </figure>
